# Soccer_Robot

./: .gitignore  README.md  humanoid_soccer.xml  humanoid_soccer_env.py  pyproject.toml  soccer_env.py  test_humanoid_walk.py  test_soccer.py  train_humanoid_walk.py  train_soccer.py
